Listar customer funcional
se logro luego de varios intentos con distintos elementos traer na lista de customners

--- a/src/app/account-customer/profile/profile.component.html
+++ b/src/app/account-customer/profile/profile.component.html
@@ -1,1 +1,39 @@
-<p>profile works!</p>
+
+
+<table *ngFor="let index of customers">
+<ul>
+<a>Email: {{index.email}} </a>
+<a>Phone: {{index.phone}}</a>
+
+</ul>
+
+</table>
+
+
+
+<!-- <head>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+ 
+</head>
+<body >
+    
+<div class="toolbar" >
+    <div class="toolbar-item" id="profile">
+      <i class="fas fa-user"></i>
+      <p>Perfil</p>
+    </div>
+    <div class="toolbar-item" id="accounts">
+      <i class="fas fa-credit-card"></i>
+      <p>Cuentas</p>
+    </div>
+    <div class="toolbar-item" id="deposits">
+      <i class="fas fa-dollar-sign"></i>
+      <p>Depósitos</p>
+    </div>
+    <div class="toolbar-item" id="transfers">
+      <i class="fas fa-exchange-alt"></i>
+      <p>Transferencias</p>
+    </div>
+
+</body> -->
