--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -1,6 +1,6 @@
-<table>
+<!--<table>
     <tr>
-        <td>
+         <td>
             
             <pre> {{ activeCustomer | json }} </pre>
             <button (click)="filterActiveCustomers(true)"> Filtrar por activo </button>
@@ -34,4 +34,4 @@
             <pre> {{ getCustomerById | json }} </pre>
         </td>
     </tr>
-</table>
+</table> -->
