--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,4 +1,20 @@
-<p>
+<div class="toolbar">
+  <div class="left-side">
+    <a href="#">Inicio</a>
+    <a href="#">Cuentas</a>
+    <a href="#">Transferencia</a>
+    <a href="#">Depósitos</a>
+    <a href="#">Info de usuario</a>
+  </div>
+  <div class="right-side">
+    <a href="#">Sign In</a>
+    <a href="#">Sign Up</a>
+  </div>
+</div>
+
+
+
+<!-- <p>
   <mat-toolbar>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
@@ -27,4 +43,4 @@
       <mat-icon>share</mat-icon>
     </button>
   </mat-toolbar>
-</p>
+</p> -->
