--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -1,5 +1,37 @@
-<h1>
-    
-    formulario para generar un nuevo usuario
+<!DOCTYPE html>
+<html>
+<head>
 
-</h1>
+  
+
+    <title >Formulario de Registro Bancario</title>
+</head>
+<body>
+
+
+    <div class="container">
+    <h1>Formulario de Registro</h1>
+    <form>
+      <label for="nombre">Nombre completo:</label>
+      <input type="text" id="nombre" name="nombre" required>
+
+      <label for="documento">Documento:</label>
+      <input type="text" id="documento" name="documento" required>
+
+      <label for="tipo">Tipo de documento:</label>
+      <select id="tipo" name="tipo">
+        <option value="cedula">Cedula</option>
+        <option value="pasaporte">Pasaporte</option>
+      </select>
+
+      <label for="telefono">Telefono:</label>
+      <input type="tel" id="telefono" name="telefono" required>
+
+      <div class="buttons">
+        <input type="button" value="Atrás">
+        <input type="submit" value="Registrar">
+      </div>
+    </form>
+  </div>
+</body>
+</html>
