--- a/src/app/shared/toolbar/toolbar.component.scss
+++ b/src/app/shared/toolbar/toolbar.component.scss
@@ -1,3 +1,23 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+.toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #4796b6;
+}
+
+.left-side a {
+  color: #fff;
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+.right-side a {
+  color: #fff;
+  text-decoration: none;
+  font-size: smaller;
+  margin-left: 10px;
+}
