--- a/src/app/components/desktop/profile/profile.component.html
+++ b/src/app/components/desktop/profile/profile.component.html
@@ -7,8 +7,8 @@
         <mat-grid-tile [colspan]="1" [rowspan]="1">
           <mat-label>Account Id: </mat-label>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-label>{{show}}</mat-label>
+        <mat-grid-tile [colspan]="2" [rowspan]="1">
+          <mat-label>{{data}}</mat-label>
         </mat-grid-tile>
 
 
