--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -1,19 +1,20 @@
-<form style="margin-left: 30%;" >
+<form style="margin-left: 30%;" [formGroup]="formLogin"  >
 	<div>
 		<section >
 			<h1 style="margin: 15px;color:rgb(8, 82, 141);font-family:'Times New Roman', Times, serif;font-size: 25px;" > Ingreso de Usuario</h1>
 		</section>
 		<div class="col-md-8" >
-				<label for="inputEmail4" class="form-label">Email</label>
-				<input type="email" class="form-control" id="inputEmail4" placeholder="Exemplo: Exemplo@gmail.com">
+				<label for="inputEmail4"  class="form-label"
+				>Email</label>
+				<input type="email" formControlName="username" class="form-control" id="inputEmail4" placeholder="Exemplo: Exemplo@gmail.com">
 		</div>
 		<div class="col-md-8">
 				<label for="inputPassword4" class="form-label">Password</label>
-				<input type="password" class="form-control" id="inputPassword4">
+				<input type="password"  formControlName="password" class="form-control" id="inputPassword4">
 		</div>
 		<a routerLink="/signUp" style="margin: 10%;" >Sign Up</a>
 		<div class="col-12" style="top: 20px;">
-			<button type="submit" class="btn btn-primary" style="width: 250px;" >Ingresar</button>
+			<button type="submit" class="btn btn-primary" (click)="signIn()" style="width: 250px;" >Ingresar</button>
 		</div>
 	</div>
 </form>
