muestro datos customer

--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -28,6 +28,7 @@
       </ul>
       <div class="form-inline my-2 my-lg-0">
         <button class="btn btn-outline-primary my-2 my-sm-0 mr-2" [routerLink]="['/singup']">Registrarse</button>
+        <button class="btn btn-outline-primary my-2 my-sm-0 mr-2" [routerLink]="['/customer']">Mi cuenta</button>
         <button class="btn btn-outline-success my-2 my-sm-0"[routerLink]="['/singin']">Iniciar Sesión</button>
         <button class="btn btn-outline-primary my-2 my-sm-0 mr-2"[routerLink]="['/createdeposit']">Depositar</button>
         <button class="btn btn-outline-primary my-2 my-sm-0 mr-2"[routerLink]="['/help']">Help</button>
