--- a/src/app/account-customer/profile/profile.component.html
+++ b/src/app/account-customer/profile/profile.component.html
@@ -1,5 +1,9 @@
 
 
+
+<p> email: {{customer?.email}} </p>
+
+<!-- 
 <table *ngFor="let index of customers">
 <ul>
 <a>Email: {{index.email}} </a>
@@ -7,7 +11,7 @@
 
 </ul>
 
-</table>
+</table> -->
 
 
 
