--- a/src/app/login/sign-up/sign-up.component.html
+++ b/src/app/login/sign-up/sign-up.component.html
@@ -4,7 +4,7 @@
       <div class="w-5/6 md:w-3/4 lg:w-2/3 xl:w-[500px] 2xl:w-[550px] mt-8 mx-auto px-16 py-8 rounded-lg">
 
           <h2 class="text-center text-2xl font-bold tracking-wide text-gray-800">Registrarse</h2>
-          <p class="text-center text-sm text-gray-600 mt-2">¿Ya tienes una cuenta? <a (click)="redirect('sign-in')" class="text-blue-600 hover:text-blue-700 hover:underline">Inicia sesión aquí</a></p>
+          <p class="text-center text-sm text-gray-600 mt-2">¿Ya tienes una cuenta? <a (click)="redirect('login/sign-in')" class="text-blue-600 hover:text-blue-700 hover:underline">Inicia sesión aquí</a></p>
 
           <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="my-8 text-sm">
 
