--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="this.currentRoute !== '/sign-in' && this.currentRoute !== '/sign-up'">
+<div *ngIf="this.currentRoute !== '/login/sign-in' && this.currentRoute !== '/login/sign-up'">
   <nav class="bg-gray-800">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="flex h-16 items-center justify-between">
@@ -8,10 +8,10 @@
           </div>
           <div class="hidden md:block">
             <div class="ml-10 flex items-baseline space-x-4">
-              <a routerLink="/dashboard" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Escritorio</a>
+              <a routerLink="/dashboard/view" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Escritorio</a>
               <a routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Cuentas</a>
               <a routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Transferir</a>
-              <a routerLink="/deposits" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Depositar</a>
+              <a routerLink="/accounts/deposits" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Depositar</a>
             </div>
           </div>
         </div>
@@ -33,7 +33,7 @@
               </div>
 
               <div id="userDropdown" *ngIf="userDropdown === true" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" tabindex="-1">
-                <a routerLink="/app-profile" routerLinkActive="bg-gray-100" (click)="userDropdownSwitch()" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-0">Tu perfil</a>
+                <a routerLink="/dashboard/profile" routerLinkActive="bg-gray-100" (click)="userDropdownSwitch()" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-0">Tu perfil</a>
                 <a routerLinkActive="bg-gray-100" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-1">Opciones</a>
                 <a (click)="this.logout()" class="block px-4 py-2 text-sm hover:bg-gray-200 text-gray-700 text-center" role="menuitem" tabindex="-1" id="user-menu-item-2">Cerrar sesión</a>
               </div>
@@ -57,10 +57,10 @@
     <!-- Mobile menu -->
     <div class="md:hidden" *ngIf="this.mobileMenu">
       <div class="space-y-1 px-2 pt-2 pb-3 sm:px-3">
-        <a routerLink="/dashboard" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Escritorio</a>
+        <a routerLink="/dashboard/view" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">Escritorio</a>
         <a routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Cuentas</a>
         <a routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Transferir</a>
-        <a routerLink="/deposits" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Depositar</a>
+        <a routerLink="/accounts/deposits" routerLinkActive="bg-gray-900 text-white" class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Depositar</a>
       </div>
       <div class="border-t border-gray-700 pt-4 pb-3">
         <div class="flex items-center px-5">
@@ -79,7 +79,7 @@
           </button>
         </div>
         <div class="mt-3 space-y-1 px-2">
-          <a routerLink="/app-profile" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Tu perfil</a>
+          <a routerLink="/dashboard/profile" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Tu perfil</a>
           <a class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Opciones</a>
           <a (click)="this.logout()" class="block rounded-md px-3 py-2 text-base font-medium text-gray-400 hover:bg-gray-700 hover:text-white">Cerrar sesión</a>
         </div>
