se completo el sig up

--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -7,7 +7,7 @@
 
     <div class="col-md-6">
     <label label for="inputDocumentType" class="form-label">Document Type</label>
-        <select style="margin: 3px;" class="form-select" aria-label="Default select example" formControlName="documentType">
+        <select style="margin: 3px;" class="form-select" aria-label="Default select example" formControlName="documentTypeId">
           <option value="1">Cedula</option>
           <option value="2">Credencial</option>
           <option value="3">Pasaporte</option>
