--- a/src/app/account/account-info/account-info.component.html
+++ b/src/app/account/account-info/account-info.component.html
@@ -11,7 +11,7 @@
               <tr class="text-lg" *ngFor="let account of accounts">
                 <td><button>{{account.id}}</button></td>
                 <td>{{account.accountType.name}}</td>
-                <td>{{account.balance}}</td>
+                <td>$ {{account.balance}}</td>
               </tr>
             </table>
 
