Account List Form Done
+ Grid showing the list of accounts of the customer Done
+ some updates to services

--- a/src/app/components/desktop/details/details.component.html
+++ b/src/app/components/desktop/details/details.component.html
@@ -16,14 +16,19 @@
           <mat-label>Amount</mat-label>
         </mat-grid-tile>
 
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-label>----</mat-label>
-        </mat-grid-tile><mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-label>Savings</mat-label>
-        </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          <mat-label>Balance: $ {{0.00}}</mat-label>
-        </mat-grid-tile>
+        <span *ngFor="let account of accounts">
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>{{account.id}}</mat-label>
+          </mat-grid-tile>
+
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>{{account.accountTypeId.name}}</mat-label>
+          </mat-grid-tile>
+
+          <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-label>{{account.balance}}</mat-label>
+          </mat-grid-tile>
+        </span>
 
       </mat-grid-list>
     </mat-card>
