Commit Repair SingUp

--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -5,14 +5,13 @@
 <section class="form-register"  *ngIf= "(globalService.switchLogUp)" >
   <h4>Sign Up</h4>
   <form>
-    <input class="controls" type="text" id="tipo" name="tipo"  placeholder="Usuario">
-    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Tipo de documento">
-    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="N° Documento">
     <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Nombre Completo">
-    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Teléfono">
-    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="e-mail">
-    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Contraseña">
-    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="img Avatar">
+    <input class="controls" type="text" id="documentType" name="nombre"  placeholder="Tipo de documento">
+    <input class="controls" type="text" id="document" name="nombre"  placeholder="N° Documento">
+    <input class="controls" type="text" id="phone" name="nombre"  placeholder="Teléfono">
+    <input class="controls" type="text" id="email" name="nombre"  placeholder="e-mail">
+    <input class="controls" type="text" id="password" name="nombre"  placeholder="Contraseña">
+    <input class="controls" type="text" id="accountType" name="nombre"  placeholder="Tipo de cuenta">
      
     <button class="boton"  (click)="true"  >Sign Up</button>
    
