Commit SingUp implemented

--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -5,7 +5,7 @@
 <section class="form-register"  *ngIf= "(globalService.switchLogUp)" >
   <h4>Sign Up</h4>
   <form>
-    <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Nombre Completo">
+    <input class="controls" type="text" id="fullName" name="nombre"  placeholder="Nombre Completo">
     <input class="controls" type="text" id="documentType" name="nombre"  placeholder="Tipo de documento">
     <input class="controls" type="text" id="document" name="nombre"  placeholder="N° Documento">
     <input class="controls" type="text" id="phone" name="nombre"  placeholder="Teléfono">
