--- a/src/app/login/singup/singup.component.scss
+++ b/src/app/login/singup/singup.component.scss
@@ -94,3 +94,17 @@
 .form-register .boton:hover{
   background-color: #5eaefff2;
 }
+
+
+.controls2 {
+  width: 100%;
+  background: #f8faf8;
+  padding: 10px;
+
+
+  margin-bottom: 16px;
+  border: 3px solid #f8faf8;
+  font-family: Helvetica;
+  font-size: 18px;
+  color: #707070;
+}
