Funcion Sign Up funcionando
Se Corrigieron detalles estaban mal pasados los parametros en la funcion el la funcion signUp si funciona se adjunta foto luego

--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -41,7 +41,7 @@
 
       <div class="buttons">
         <input type="button" value="Atrás">
-        <input (click)="register(email,password,typeDoc,typeAcc,fullname,phone,document)" type="submit" value="Registrar">
+        <input (click)="register(document,email,password,fullname,phone,typeAcc,typeDoc)" type="submit" value="Registrar">
       </div>
 
     </form>
